--- a/jobs/const_kaplan_8_nodes.yaml
+++ b/jobs/const_kaplan_8_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: const_kaplan_8_nodes
+  name: const_kaplan_8_nodes_less_epochs
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 8
@@ -13,16 +13,16 @@ parameters:
         lr_cooldown_end: [4.3e-05]
         beta2: [0.99]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [290739449]
+          - train_num_samples: [2907394490]
             max_tokens: [500000000000] # holder for the max tokens (in submit_multiple all entries in LIST should have the same length)
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [29073944936]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
       - model: ['layers=21_hidden-dim=832']
         warmup_tokens: [220872704, 1572864000] 
@@ -32,16 +32,16 @@ parameters:
         lr_cooldown_end: [3.8e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [196191437]
+          - train_num_samples: [1961914370]
             max_tokens: [500000000000]
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [19619143764]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
       - model: ['layers=23_hidden-dim=1024']
         warmup_tokens: [347078656, 1572864000] 
@@ -51,16 +51,16 @@ parameters:
         lr_cooldown_end: [3.2e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [124851622]
+          - train_num_samples: [1248516224]
             max_tokens: [500000000000]
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [12485162249]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
       - model: ['layers=26_hidden-dim=1120']
         warmup_tokens: [455311360, 1572864000] 
@@ -70,16 +70,16 @@ parameters:
         lr_cooldown_end: [3.0e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [95172967]
+          - train_num_samples: [951729676]
             max_tokens: [500000000000] 
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [9517296764]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
       - model: ['layers=26_hidden-dim=1312']
         warmup_tokens: [611958784, 1572864000] 
@@ -89,35 +89,35 @@ parameters:
         lr_cooldown_end: [2.7e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [70810869]
+          - train_num_samples: [708108690]
             max_tokens: [500000000000] 
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [7081086908]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
-      - model: ['layers=30_hidden-dim=1504']
-        warmup_tokens: [901726208, 1572864000] 
-        accum_freq: [4]
-        batch_size: [20]
-        lr: [2.4e-03]
-        lr_cooldown_end: [2.4e-05]
-        beta2: [0.95]
-        LIST_SCHED_BUDGET:
-          - train_num_samples: [48055976]
-            max_tokens: [500000000000] 
-            lr_scheduler: ['const']
-            averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
-            max_tokens: [4805597636]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [1000]
+      # - model: ['layers=30_hidden-dim=1504']
+      #   warmup_tokens: [901726208, 1572864000] 
+      #   accum_freq: [5]
+      #   batch_size: [20]
+      #   lr: [2.4e-03]
+      #   lr_cooldown_end: [2.4e-05]
+      #   beta2: [0.95]
+      #   LIST_SCHED_BUDGET:
+      #     - train_num_samples: [480559760]
+      #       max_tokens: [500000000000] 
+      #       lr_scheduler: ['const']
+      #       averagers: ['poly_08_1']
+      #       epochs: [10]
+      #     - train_num_samples: [436906667]
+      #       max_tokens: [4805597636]
+      #       lr_scheduler: ['cosine']
+      #       averagers: ['none']
+      #       epochs: [300]
 
     
     dataset_resampled: [false]
