--- a/jobs/const_kaplan_2_nodes.yaml
+++ b/jobs/const_kaplan_2_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: const_kaplan_2_nodes
+  name: const_kaplan_2_nodes_less_epochs
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 2
@@ -12,16 +12,16 @@ parameters:
         lr: [8.0e-03]
         lr_cooldown_end: [8.0e-05]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [44974080]
+          - train_num_samples: [449740800]
             max_tokens: [500000000000] # holder for the max tokens (in submit_multiple all entries in LIST should have the same length)
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [4497408000]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
       - model: ['layers=9_hidden-dim=320']
         warmup_tokens: [28672000, 1572864000] 
@@ -30,16 +30,16 @@ parameters:
         lr: [5.1e-03]
         lr_cooldown_end: [5.1e-05]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [57344000]
+          - train_num_samples: [573440000]
             max_tokens: [500000000000] # holder for the max tokens (in submit_multiple all entries in LIST should have the same length)
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [5734400000]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
       - model: ['layers=10_hidden-dim=384']
         warmup_tokens: [37060608, 1572864000] 
@@ -48,16 +48,16 @@ parameters:
         lr: [5.1e-03]
         lr_cooldown_end: [5.1e-05]
         LIST_SCHED_BUDGET:
-          - train_num_samples: [74121216]
+          - train_num_samples: [741212160]
             max_tokens: [500000000000] # holder for the max tokens (in submit_multiple all entries in LIST should have the same length)
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [7412121600]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
       - model: ['layers=12_hidden-dim=480']
         warmup_tokens: [57384960, 1572864000] 
@@ -66,16 +66,16 @@ parameters:
         lr: [4.7e-03]
         lr_cooldown_end: [4.7e-05] 
         LIST_SCHED_BUDGET:
-          - train_num_samples: [216924160]
+          - train_num_samples: [2169241600]
             max_tokens: [500000000000]
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-            epochs: [100]
-          - train_num_samples: [131072000]
+            epochs: [10]
+          - train_num_samples: [436906667]
             max_tokens: [11476992000]
             lr_scheduler: ['cosine']
             averagers: ['none']
-            epochs: [1000]
+            epochs: [300]
 
     beta2: [0.99]
     dataset_resampled: [false]
