--- a/jobs/kaplan_4_nodes_orig.yaml
+++ b/jobs/kaplan_4_nodes_orig.yaml
@@ -1,37 +1,21 @@
 job_details:
-  name: const_long_runs_2_nodes_rpj
+  name: kaplan_4_nodes_orig
   output_dir: exps_final_runs
   num_gpus: 4
-  num_nodes: 2
+  num_nodes: 4
 parameters:
     LIST_MODEL_TOKENS:
-      - model: ['layers=8_hidden-dim=288']
-        train_num_samples: [89948160] # ~89M
-        warmup_tokens: [13107200]
-
-      - model: ['layers=9_hidden-dim=320']
-        train_num_samples: [114688000] # ~114M
-        warmup_tokens: [13107200]
-
-      - model: ['layers=10_hidden-dim=384']
-        train_num_samples: [148242432] # ~148M
-        warmup_tokens: [13107200]
-
-      - model: ['layers=12_hidden-dim=480']
-        train_num_samples: [229539840] # ~229M
-        warmup_tokens: [14346240]
-
       - model: ['layers=14_hidden-dim=576']
-        train_num_samples: [339148800] # ~339M
+        train_num_samples: [169574400]
         warmup_tokens: [21196800]
 
       - model: ['layers=15_hidden-dim=640']
-        train_num_samples: [433848320] # ~433M
+        train_num_samples: [216924160]
         warmup_tokens: [27115520]
 
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    batch_size: [8] # global batch size is 8*2*4 = 64
+    batch_size: [16] # global batch size is 16*2*4 = 128
     grad_checkpointing: [true]
     log_every_n_steps: [20]
     csv_log: [true]
@@ -41,21 +25,20 @@ parameters:
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
-    data_key: ['json']
+    data_key: ['json.gz']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['const']
-    averagers: ['poly_08_1'] # add more averagers?
+    lr_scheduler: ['cosine']
     log_avg_model_training_loss: [20] # if adding averagers, maybe increase this
     wd: [0.033]
-    lr: [1.5e-03] 
+    lr: [2.12e-03] 
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
-    accum_freq: [1]
+    accum_freq: [2] # because of the annoying memory error
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    max_checkpoints_flops: [9]
-    train_data: ['/p/fastdata/mmlaion/lmdata/rpj/shard_{00000004..00099999}.tar']
+    max_checkpoints_flops: [40]
+    train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
