corrected runs jobs

--- a/jobs/const_kaplan_8_nodes.yaml
+++ b/jobs/const_kaplan_8_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: const_kaplan_8_nodes_less_epochs
+  name: const_8_nodes_tuned
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 8
@@ -18,11 +18,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [29073944936]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [29073944936]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
       - model: ['layers=21_hidden-dim=832']
         warmup_tokens: [220872704, 1572864000] 
@@ -37,11 +37,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [19619143764]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [19619143764]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
       - model: ['layers=23_hidden-dim=1024']
         warmup_tokens: [347078656, 1572864000] 
@@ -56,11 +56,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [12485162249]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [12485162249]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
       - model: ['layers=26_hidden-dim=1120']
         warmup_tokens: [455311360, 1572864000] 
@@ -75,11 +75,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [9517296764]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [9517296764]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
       - model: ['layers=26_hidden-dim=1312']
         warmup_tokens: [611958784, 1572864000] 
@@ -94,25 +94,25 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [7081086908]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [7081086908]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
-      # - model: ['layers=30_hidden-dim=1504']
-      #   warmup_tokens: [901726208, 1572864000] 
-      #   accum_freq: [5]
-      #   batch_size: [20]
-      #   lr: [2.4e-03]
-      #   lr_cooldown_end: [2.4e-05]
-      #   beta2: [0.95]
-      #   LIST_SCHED_BUDGET:
-      #     - train_num_samples: [480559760]
-      #       max_tokens: [500000000000] 
-      #       lr_scheduler: ['const']
-      #       averagers: ['poly_08_1']
-      #       epochs: [10]
+      - model: ['layers=30_hidden-dim=1504']
+        warmup_tokens: [901726208, 1572864000] 
+        accum_freq: [5]
+        batch_size: [20]
+        lr: [2.4e-03]
+        lr_cooldown_end: [2.4e-05]
+        beta2: [0.95]
+        LIST_SCHED_BUDGET:
+          - train_num_samples: [480559760]
+            max_tokens: [500000000000] 
+            lr_scheduler: ['const']
+            averagers: ['poly_08_1']
+            epochs: [10]
       #     - train_num_samples: [436906667]
       #       max_tokens: [4805597636]
       #       lr_scheduler: ['cosine']
@@ -140,4 +140,4 @@ parameters:
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
-    train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
