--- a/jobs/const_kaplan_2_nodes.yaml
+++ b/jobs/const_kaplan_2_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: const_kaplan_2_nodes_less_epochs
+  name: const_2_nodes_tuned
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 2
@@ -17,11 +17,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [4497408000]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [4497408000]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
       - model: ['layers=9_hidden-dim=320']
         warmup_tokens: [28672000, 1572864000] 
@@ -35,11 +35,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [5734400000]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [5734400000]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
       - model: ['layers=10_hidden-dim=384']
         warmup_tokens: [37060608, 1572864000] 
@@ -53,11 +53,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [7412121600]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [7412121600]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
       - model: ['layers=12_hidden-dim=480']
         warmup_tokens: [57384960, 1572864000] 
@@ -71,11 +71,11 @@ parameters:
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [10]
-          - train_num_samples: [436906667]
-            max_tokens: [11476992000]
-            lr_scheduler: ['cosine']
-            averagers: ['none']
-            epochs: [300]
+          # - train_num_samples: [436906667]
+          #   max_tokens: [11476992000]
+          #   lr_scheduler: ['cosine']
+          #   averagers: ['none']
+          #   epochs: [300]
 
     beta2: [0.99]
     dataset_resampled: [false]
@@ -98,4 +98,4 @@ parameters:
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
-    train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
