--- a/jobs/kaplan_4_nodes_orig.yaml
+++ b/jobs/kaplan_4_nodes_orig.yaml
@@ -6,13 +6,14 @@ job_details:
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=14_hidden-dim=576']
-        train_num_samples: [169574400]
-        warmup_tokens: [21196800]
+        max_tokens: [16957440000]
+        warmup_tokens: [84787200, 1572864000]
 
       - model: ['layers=15_hidden-dim=640']
-        train_num_samples: [216924160]
-        warmup_tokens: [27115520]
+        max_tokens: [21692416000]
+        warmup_tokens: [108462080, 1572864000]
 
+    train_num_samples: [436906667]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     batch_size: [16] # global batch size is 16*2*4 = 128
@@ -29,16 +30,14 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['cosine']
-    log_avg_model_training_loss: [20] # if adding averagers, maybe increase this
+    log_avg_model_training_loss: [20]
     wd: [0.033]
-    lr: [2.12e-03] 
-    epochs: [100]
+    lr: [3.0e-03] 
+    epochs: [300]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
-    accum_freq: [2] # because of the annoying memory error
+    accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [40]
-    train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
-    # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
-    # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
