--- a/jobs/kaplan_8_nodes_orig.yaml
+++ b/jobs/kaplan_8_nodes_orig.yaml
@@ -1,26 +1,34 @@
 job_details:
-  name: kaplan_2_nodes_orig
+  name: kaplan_8_nodes_orig
   output_dir: exps_final_runs
   num_gpus: 4
-  num_nodes: 2
+  num_nodes: 8
 parameters:
     LIST_MODEL_TOKENS:
-      - model: ['layers=8_hidden-dim=288']
-        max_tokens: [4497408000]
-        warmup_tokens: [22487040, 1572864000] 
+      - model: ['layers=18_hidden-dim=704']
+        max_tokens: [29073944936] 
+        warmup_tokens: [149045248, 1572864000] 
 
-      - model: ['layers=9_hidden-dim=320']
-        warmup_tokens: [28672000, 1572864000] 
-        max_tokens: [5734400000]
+      - model: ['layers=21_hidden-dim=832']
+        max_tokens: [19619143764]
+        warmup_tokens: [55218176, 1572864000]
 
-      - model: ['layers=10_hidden-dim=384']
-        warmup_tokens: [37060608, 1572864000] 
-        max_tokens: [7412121600]
+      - model: ['layers=23_hidden-dim=1024']
+        max_tokens: [12485162249] 
+        warmup_tokens: [220872704, 1572864000]
 
-      - model: ['layers=12_hidden-dim=480']
-        warmup_tokens: [57384960, 1572864000] 
-        max_tokens: [11476992000] 
-    
+      - model: ['layers=26_hidden-dim=1120']
+        max_tokens: [9517296764] 
+        warmup_tokens: [455311360, 1572864000]
+
+      - model: ['layers=26_hidden-dim=1312']
+        max_tokens: [7081086908] 
+        warmup_tokens: [611958784, 1572864000]
+
+      - model: ['layers=30_hidden-dim=1504']
+        max_tokens: [4805597636] 
+        warmup_tokens: [901726208, 1572864000]
+
     train_num_samples: [436906667]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
@@ -38,14 +46,14 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['cosine']
-    log_avg_model_training_loss: [20] 
+    log_avg_model_training_loss: [20]
     wd: [0.033]
-    lr: [2.12e-03] # change to 4.24e-03?
+    lr: [4.24e-03] 
     epochs: [300]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
-    accum_freq: [1] # because of the annoying memory error
+    accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
     dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
