--- a/jobs/chinchilla_1_nodes.yaml
+++ b/jobs/chinchilla_1_nodes.yaml
@@ -1,12 +1,16 @@
 job_details:
-  name: chinchilla_1_nodes_orig
+  name: chinchilla_1_nodes_tuned
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 1
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=3_hidden-dim=96']
-        warmup_tokens: [5173248]         
+        warmup_tokens: [5173248] 
+        accum_freq: [1]
+        batch_size: [5]
+        lr: [1.3e-02]
+        lr_cooldown_end: [1.3e-04]
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_EPOCHS_BUDGET:
@@ -19,6 +23,10 @@ parameters:
 
       - model: ['layers=4_hidden-dim=128']
         warmup_tokens: [7503872] 
+        accum_freq: [1]
+        batch_size: [7]
+        lr: [1.15e-02]
+        lr_cooldown_end: [1.15e-04]
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_EPOCHS_BUDGET:
@@ -31,8 +39,12 @@ parameters:
 
       - model: ['layers=5_hidden-dim=160']
         warmup_tokens: [9809920] 
+        accum_freq: [1]
+        batch_size: [8]
+        lr: [1.05e-02]
         lr_scheduler: ['cosine']
         averagers: ['none']
+        lr_cooldown_end: [1.05e-04]
         LIST_EPOCHS_BUDGET:
           - train_num_samples: [10618504, 21237007, 42474013, 84948026]          
             epochs: [10]
@@ -41,8 +53,12 @@ parameters:
             epochs: [10]
             max_checkpoints_flops: [3]
 
-      - model: ['layers=12_hidden-dim=480']
+      - model: ['layers=6_hidden-dim=224']
         warmup_tokens: [15597568] 
+        accum_freq: [1]
+        batch_size: [11]
+        lr: [9.0e-03]
+        lr_cooldown_end: [9.0e-05]
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_EPOCHS_BUDGET:
@@ -52,14 +68,8 @@ parameters:
           - train_num_samples: [6678392]
             epochs: [10]
             max_checkpoints_flops: [3]
-  
-    accum_freq: [1]
-    flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    batch_size: [16]
-    lr: [3.0e-3]
-    lr_cooldown_end: [3.0e-5]
-    # beta2: [0.99]
-    beta2: [0.95]
+
+    beta2: [0.99]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
@@ -74,9 +84,9 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     log_avg_model_training_loss: [20]
-    # decoupled_wd: [1.0e-4]
-    wd: [0.033]
+    decoupled_wd: [1.0e-4]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
+    train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
