--- a/jobs/chinchilla_2_nodes.yaml
+++ b/jobs/chinchilla_2_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: chinchilla_2_nodes_orig
+  name: chinchilla_2_nodes_tuned
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 2
@@ -7,6 +7,10 @@ parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=8_hidden-dim=288']
         warmup_tokens: [22487040] 
+        accum_freq: [1]
+        batch_size: [7]
+        lr: [8.0e-03]
+        lr_cooldown_end: [8.0e-05]
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_EPOCHS_BUDGET:
@@ -19,6 +23,10 @@ parameters:
 
       - model: ['layers=9_hidden-dim=320']
         warmup_tokens: [28672000] 
+        accum_freq: [1]
+        batch_size: [8]
+        lr: [5.1e-03]
+        lr_cooldown_end: [5.1e-05]
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_EPOCHS_BUDGET:
@@ -31,6 +39,10 @@ parameters:
 
       - model: ['layers=10_hidden-dim=384']
         warmup_tokens: [37060608] 
+        accum_freq: [1]
+        batch_size: [10]
+        lr: [5.1e-03]
+        lr_cooldown_end: [5.1e-05]
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_SCHED_BUDGET:
@@ -43,6 +55,10 @@ parameters:
 
       - model: ['layers=12_hidden-dim=480']
         warmup_tokens: [57384960] 
+        accum_freq: [1]
+        batch_size: [13]
+        lr: [4.7e-03]
+        lr_cooldown_end: [4.7e-05] 
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_EPOCHS_BUDGET:
@@ -52,13 +68,8 @@ parameters:
           - train_num_samples: [15725645, 31451289, 62902577, 125805153]
             max_checkpoints_flops: [0]
             epochs: [50]
-    
-    accum_freq: [1]
-    batch_size: [16]
-    lr: [4.24e-03]
-    lr_cooldown_end: [4.24e-05] 
-    # beta2: [0.99]
-    beta2: [0.95]
+
+    beta2: [0.99]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
@@ -73,8 +84,7 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     log_avg_model_training_loss: [20]
-    # decoupled_wd: [1.0e-4]
-    wd: [0.033]
+    decoupled_wd: [1.0e-4]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
