--- a/jobs/chinchilla_4_nodes.yaml
+++ b/jobs/chinchilla_4_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: chinchilla_4_nodes_orig
+  name: chinchilla_4_nodes
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 4
@@ -7,30 +7,33 @@ parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=14_hidden-dim=576']
         warmup_tokens: [84787200] 
+        accum_freq: [1]
+        batch_size: [8]
+        lr: [5.1e-03]
+        lr_cooldown_end: [5.1e-05]
         lr_scheduler: ['cosine']
         averagers: ['none']
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [7862823]
-            max_checkpoints_flops: [3]
-          - train_num_samples: [15725645, 31451289, 62902577, 125805153]
-            max_checkpoints_flops: [0]
+        - train_num_samples: [7862823]
+          max_checkpoints_flops: [3]
+        - train_num_samples: [15725645, 31451289, 62902577, 125805153]
+          max_checkpoints_flops: [0]
 
       - model: ['layers=15_hidden-dim=640']
         warmup_tokens: [108462080] 
+        accum_freq: [1]
+        batch_size: [10]
+        lr: [4.7e-03]
+        lr_cooldown_end: [4.7e-05] 
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [6146542]
-            max_checkpoints_flops: [3]
-          - train_num_samples: [12293084, 24586166, 49172332, 98344663]
-            max_checkpoints_flops: [0]
+        - train_num_samples: [6146542]
+          max_checkpoints_flops: [3]
+        - train_num_samples: [12293084, 24586166, 49172332, 98344663]
+          max_checkpoints_flops: [0]
         averagers: ['none']
 
-    lr: [4.24e-03]
-    lr_cooldown_end: [4.24e-05]
-    accum_freq: [1]
-    batch_size: [8]
     epochs: [50]
-    # beta2: [0.99]
-    beta2: [0.95]
+    beta2: [0.99]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
@@ -45,10 +48,9 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     log_avg_model_training_loss: [20]
-    # decoupled_wd: [1.0e-4]
-    wd: [0.033]
+    decoupled_wd: [1.0e-4]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
