--- a/jobs/seed_var_exp.yaml
+++ b/jobs/seed_var_exp.yaml
@@ -1,8 +1,8 @@
 job_details:
-  name: new_code_dbg
+  name: seed_variance
   output_dir: exps
-  # num_nodes: 4
-  # num_gpus: 4
+  num_nodes: 4
+  num_gpus: 4
 parameters:
     model: ['layers=15_hidden-dim=640']
     warmup_tokens: [108462080]
@@ -18,12 +18,11 @@ parameters:
         lr_scheduler: ['const']
         averagers: ['poly_08_1']
         epochs: [10]
-      # - train_num_samples: [1310720000]
-      #   max_tokens: [2169241600]
-      #   lr_scheduler: ['cosine']
-      #   averagers: ['none']
-      #   epochs: [1000]
-    # warmup: [200]
+      - train_num_samples: [1310720000]
+        max_tokens: [2169241600]
+        lr_scheduler: ['cosine']
+        averagers: ['none']
+        epochs: [1000]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
@@ -37,16 +36,12 @@ parameters:
     data_key: ['json.gz']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    # wd: [0.033]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
     delete_previous_checkpoint: [true]
-    # keep_freq: [5]
-    # keep_from: [75]
     workers: [2]
-    # train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
     dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
     flops_to_save: ['2.00e+15,4.00e+15,8.00e+15,1.60e+16,3.20e+16,6.40e+16,1.28e+17,2.56e+17,5.12e+17,1.02e+18,2.05e+18,4.10e+18,8.19e+18,1.64e+19,3.28e+19,6.55e+19']
     max_checkpoints_flops: [3]
 
-    seed: [1]
+    seed: [1, 2, 3, 4, 5, 6, 7]
