--- a/jobs/const_4_nodes_tuned.yaml
+++ b/jobs/const_4_nodes_tuned.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: const_4_nodes_tuned
+  name: const_4_nodes_tuned_openwebtext2
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 4
@@ -62,4 +62,6 @@ parameters:
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
+    multiple_data_passes: [true]
