--- a/jobs/chinchilla_8_nodes.yaml
+++ b/jobs/chinchilla_8_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: chinchilla_8_nodes_tuned
+  name: CC_8_nodes_tuned_openwebtext2
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 8
@@ -42,7 +42,7 @@ parameters:
         LIST_BUDGET_MAX_SAVE:
           - train_num_samples: [15366354]
             max_checkpoints_flops: [3]
-          - train_num_samples: [30732708, 61465415, 122930829, 245861657]
+          - train_num_samples: [30732708, 61465415, 122930829]
             max_checkpoints_flops: [0]
 
       - model: ['layers=26_hidden-dim=1120']
@@ -103,4 +103,6 @@ parameters:
     delete_previous_checkpoint: [true]
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
+    multiple_data_passes: [true]
