--- a/jobs/chinchilla_8_nodes.yaml
+++ b/jobs/chinchilla_8_nodes.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: CC_8_nodes_tuned_openwebtext2
+  name: CC_8_nodes_orig_openwebtext2
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 8
@@ -7,11 +7,6 @@ parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=18_hidden-dim=704']
         warmup_tokens: [149045248] 
-        accum_freq: [1]
-        batch_size: [6]
-        lr: [4.3e-03]
-        lr_cooldown_end: [4.3e-05]
-        beta2: [0.99]
         LIST_BUDGET_MAX_SAVE:
             - train_num_samples: [8945830]
               max_checkpoints_flops: [3]
@@ -21,11 +16,6 @@ parameters:
 
       - model: ['layers=21_hidden-dim=832']
         warmup_tokens: [220872704] 
-        accum_freq: [1]
-        batch_size: [8]
-        lr: [3.8e-03]
-        lr_cooldown_end: [3.8e-05]
-        beta2: [0.95]
         LIST_BUDGET_MAX_SAVE:
           - train_num_samples: [12073320]
             max_checkpoints_flops: [3]
@@ -34,11 +24,6 @@ parameters:
 
       - model: ['layers=23_hidden-dim=1024']
         warmup_tokens: [347078656] 
-        accum_freq: [2]
-        batch_size: [10]
-        lr: [3.2e-03]
-        lr_cooldown_end: [3.2e-05]
-        beta2: [0.95]
         LIST_BUDGET_MAX_SAVE:
           - train_num_samples: [15366354]
             max_checkpoints_flops: [3]
@@ -47,11 +32,6 @@ parameters:
 
       - model: ['layers=26_hidden-dim=1120']
         warmup_tokens: [455311360] 
-        accum_freq: [2]
-        batch_size: [14]
-        lr: [3.0e-03]
-        lr_cooldown_end: [3.0e-05]
-        beta2: [0.95]
         LIST_BUDGET_MAX_SAVE:
           - train_num_samples: [23427193]
             max_checkpoints_flops: [3]
@@ -60,11 +40,6 @@ parameters:
 
       - model: ['layers=26_hidden-dim=1312']
         warmup_tokens: [611958784] 
-        accum_freq: [2]
-        batch_size: [16]
-        lr: [2.7e-03]
-        lr_cooldown_end: [2.7e-05]
-        beta2: [0.95]
         LIST_BUDGET_MAX_SAVE:
           - train_num_samples: [34860736]
             max_checkpoints_flops: [3]
@@ -73,17 +48,17 @@ parameters:
 
       - model: ['layers=30_hidden-dim=1504']
         warmup_tokens: [901726208] 
-        accum_freq: [4]
-        batch_size: [20]
-        lr: [2.4e-03]
-        lr_cooldown_end: [2.4e-05]
         beta2: [0.95]
         LIST_BUDGET_MAX_SAVE:
           - train_num_samples: [47316654]
             max_checkpoints_flops: [3]
 
+    lr: [6.0e-3]
+    batch_size: [8]
+    lr_cooldown_end: [6.0e-5]
+    beta2: [0.95]
     lr_scheduler: ['cosine']
-    epochs: [100]
+    # beta2: [0.99]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
@@ -98,7 +73,8 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     log_avg_model_training_loss: [20]
-    decoupled_wd: [1.0e-4]
+    # decoupled_wd: [1.0e-4]
+    wd: [0.033]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
