--- a/jobs/kaplan_4_nodes_big_BS.yaml
+++ b/jobs/kaplan_4_nodes_big_BS.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: kaplan_4_nodes_orig_openwebtext2
+  name: kaplan_4_nodes_big_BS
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 4
@@ -16,7 +16,7 @@ parameters:
     train_num_samples: [436906667]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    batch_size: [8] # global batch size is 8*4*4 = 128
+    batch_size: [16] # global batch size is 8*4*4 = 128
     grad_checkpointing: [true]
     log_every_n_steps: [20]
     csv_log: [true]
@@ -32,14 +32,14 @@ parameters:
     lr_scheduler: ['cosine']
     log_avg_model_training_loss: [20]
     wd: [0.033]
-    lr: [2.12e-03] 
+    lr: [3.0e-03] 
     epochs: [300]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
     accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    max_checkpoints_flops: [40]
-    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
+    max_checkpoints_flops: [9]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
     multiple_data_passes: [true]
