--- a/jobs/chinchilla_4_nodes_orig.yaml
+++ b/jobs/chinchilla_4_nodes_orig.yaml
@@ -1,25 +1,31 @@
 job_details:
-  name: CC_4_nodes_orig_openwebtext2
+  name: CC_4_nodes_orig_short
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 4
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=14_hidden-dim=576']
-        warmup_tokens: [84787200]
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [7862823]
-            max_checkpoints_flops: [3]
-          - train_num_samples: [15725645, 31451289, 62902577, 125805153]
+          - train_num_samples: [3931411]
+            max_checkpoints_flops: [1]
+            epochs: [25]
+            warmup_tokens: [21196800] 
+          - train_num_samples: [3931411]
             max_checkpoints_flops: [0]
+            epochs: [50]
+            warmup_tokens: [42393600] 
 
       - model: ['layers=15_hidden-dim=640']
-        warmup_tokens: [108462080] 
         LIST_BUDGET_MAX_SAVE:
-          - train_num_samples: [6146542]
-            max_checkpoints_flops: [3]
-          - train_num_samples: [12293084, 24586166, 49172332, 98344663]
+          - train_num_samples: [3073271]
+            max_checkpoints_flops: [1]
+            epochs: [25]
+            warmup_tokens: [27115520] 
+          - train_num_samples: [3073271]
             max_checkpoints_flops: [0]
+            epochs: [50]
+            warmup_tokens: [54231040] 
 
     lr: [4.24e-3]
     batch_size: [8]
@@ -47,6 +53,6 @@ parameters:
     delete_previous_checkpoint: [true]
     workers: [2]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
-    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
+    dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/manifest_train.jsonl"]
+    # dataset_manifest: ["/p/fastdata/mmlaion/lmdata_2/openwebtext2_tokenized/manifest_train.jsonl"]
     multiple_data_passes: [true]
